--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </header>
 
   <main>
-    <p> uhuhuhuhuhhu hey buddy </P>
-    <img src="images/logo.svg" alt="uh sorry I guess">
-    <a href="https://www.wikipedia.org/">wikipedia</a>
+    <p>Lorem ipsum dolor sit amet. </P>
+    <img src="images/logo.svg" alt="">
+    <a href="https://www.wikipedia.org">wikipedia</a>
   </main>
 
 </body>
