--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </header>
 
   <main>
-    <p>Lorem ipsum dolor sit amet. </P>
+    <p>Lorem ipsum dolor sit amet. </p>
     <img src="images/logo.svg" alt="">
-    <a href="https://www.wikipedia.org">wikipedia</a>
+    <a href="https://www.wikipedia.org">Wikipedia</a>
   </main>
 
 </body>
